# marty-yoga-HRI2026

./: .gitignore  README.md  TODO.md  VIDEO_SCRIPT.md  config.toml  generate.sh  llm_generation.py  main.py  marty.toml  pose.py  pyproject.toml  refactor.md  requirements.txt  run_offline.sh  script.md  voice_memory.toml
countdown/: generate_countdown.py  generate_countdown.sh
poses/1768735404.6582885/: pose.toml
poses/1773739104.284375/: pose.toml
poses/chair/: pose.toml
poses/crescent_moon/: pose.toml
poses/l_crecent_lounge/: pose.toml
poses/l_warrior2/: pose.toml
poses/left_crescent_lunge/: pose.toml
poses/left_warrior1/: pose.toml
poses/left_warrior2/: pose.toml
poses/mountain/: pose.toml
poses/pose_mountain_1773584623/: pose.toml
poses/pose_right_warrior2_1773584648/: pose.toml
poses/r_warrior2/: pose.toml
poses1768695246.6726704/: pose.toml
poses1768695890.1776276/: pose.toml
poses1768696319.222168/: pose.toml
poses1768697566.6483397/: pose.toml
poses1768697603.288221/: pose.toml
poses1768707355.19878/: pose.toml
poses1768707482.989151/: pose.toml
poses1768707571.670837/: pose.toml
poses1768707795.83981/: pose.toml
poses1768707941.3550735/: pose.toml
poses1768708070.6571195/: pose.toml
src/: app_cli.py  camera.py  extract_body_parts.py  feedback_engine.py  feedback_preprocess.py  head_master.py  marty.py  mediapipe_operations.py  pose_image_loader.py  session_state.py  speak.py  speak_prompts.py  utils.py  video_feedback.py  window.py
tests/: test_feedback_engine.py  test_head_master_smoke.py  test_session_state.py
(+6 files in other folders)
